tests/baselines/reference/noSecondaryInference.errors.txt
tests/cases/compiler/noSecondaryInference.ts(10,5): error TS2322: Type 'number[]' is not assignable to type 'string[]':
  Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/noSecondaryInference.ts (1 errors) ====
    function isTruthy(s: any) {
        return !!s;
    }
    
    function filter<T>(a: T[], predicate: (e: T) => boolean) {
        return a.filter(predicate);
    }
    
    var x = [1, 2, 3];
    var j: string[] = filter(x, isTruthy);
        ~
!!! error TS2322: Type 'number[]' is not assignable to type 'string[]':
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
    